package com.alex.kotlin.javadesignmode.iterator

/**
 * @author Alex
 * @date 2019/3/29 上午10:18
 * @email 18238818283@sina.cn
 * @desc ...
 */
interface Congregation {
    /**
     * 初始化迭代器
     */
 fun createIterator():Iterator
}